--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "kagglehub[pandas-datasets]>=0.3.13",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
+    "pandas>=2.3.3",
     "torch>=2.9.0",
 ]
